broken checkme.js

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "dependencies": {
         "discord.io": "^2.5.3",
         "discord.js": "^12.2.0",
+        "dotenv": "^8.2.0",
+        "google-auth-library": "^6.0.0",
+        "googleapis": "^39.2.0",
         "winston": "^3.2.1"
     }
 }
